V 1.1.1 Fixed mobile bug with the header wrapping

--- a/src/components/HeadingTabs/_headerTabs.module.scss
+++ b/src/components/HeadingTabs/_headerTabs.module.scss
@@ -10,7 +10,7 @@ $height: 65px;
 .nav {
   width: 100%;
   height: $height;
-  font-size: $font-medium;
+  font-size: $font-small;
 
   display: flex;
   justify-content: center;
@@ -53,12 +53,14 @@ $height: 65px;
 .trigger {
   background-color: unset;
   color: $alpha-accent-two;
+  height: $height;
 
   border: none;
   cursor: unset;
   padding-top: 1rem;
   padding-bottom: 1rem;
   margin-right: 0.75rem;
+  border-bottom: 5px solid transparent;
 }
 
 .selectedTrigger {
@@ -70,6 +72,7 @@ $height: 65px;
 @media screen and (min-width: 744px) {
   .nav {
     padding: 0 var(--gutters);
+    font-size: $font-medium;
   }
 
   .trigger {
